fixed team component alignment

--- a/client/src/components/dashboard/maindashboard/widgets/_widget-applications.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-applications.scss
@@ -30,7 +30,7 @@
   grid-area: widget_applications_pending;
   font-size: 20px;
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   h4 {
     font-size: 10px;
     color: $secondary;
@@ -41,7 +41,7 @@
   grid-area: widget_applications_approved;
   font-size: 20px;
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   h4 {
     font-size: 10px;
   }
